# AMR_Team9

./: .env  .gitignore  .gitmodules  README.md  dependencies.repos  docker-compose.yml
.devcontainer/: devcontainer.json
ros_packages/ts1_simple_command/: CMakeLists.txt  package.xml
ros_packages/ts1_simple_command/src/: square_wave_surge_command.py
ros_packages/ts6_bluerov2_perception/: CMakeLists.txt  package.xml
ros_packages/ts6_bluerov2_perception/config/: ekf_params_imu_only.yaml  ekf_params_with_fiducial.yaml
ros_packages/ts6_bluerov2_perception/launch/: aruco_detect.launch  bridge.launch  fiducial_slam.launch  run.launch  upload.launch
ros_packages/ts6_bluerov2_perception/map/: map.txt
ros_packages/ts6_bluerov2_perception/markers/marker0/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/markers/marker1/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/markers/marker1/meshes/: Marker1.dae
ros_packages/ts6_bluerov2_perception/markers/marker10/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/markers/marker10/meshes/: Marker10.dae
ros_packages/ts6_bluerov2_perception/markers/marker11/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/markers/marker11/meshes/: Marker11.dae
ros_packages/ts6_bluerov2_perception/markers/marker12/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/markers/marker12/meshes/: Marker12.dae
ros_packages/ts6_bluerov2_perception/markers/marker13/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/markers/marker13/meshes/: Marker13.dae
ros_packages/ts6_bluerov2_perception/markers/marker14/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/markers/marker14/meshes/: Marker14.dae
ros_packages/ts6_bluerov2_perception/markers/marker15/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/markers/marker16/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/markers/marker17/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/markers/marker2/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/markers/marker3/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/markers/marker4/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/markers/marker5/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/markers/marker6/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/markers/marker7/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/markers/marker8/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/markers/marker9/: model-1_4.sdf  model-1_5.sdf  model.sdf
ros_packages/ts6_bluerov2_perception/robots/: altimeter_sss.xacro  default.xacro
ros_packages/ts6_bluerov2_perception/rviz/: bluerov2_perception.rviz
ros_packages/ts6_bluerov2_perception/script/: imu_analysis.py
ros_packages/ts6_bluerov2_perception/urdf/: base.xacro  bridge2.urdf  sensors.xacro  snippets.xacro
ros_packages/ts6_bluerov2_perception/worlds/: ocean_waves_dark.world
(+156 files in other folders)
